Updates from Overleaf

--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -5,7 +5,7 @@
 
 The analysis is performed with data samples in pp collisions at $\sqrt{s} = 13$~TeV collected from 2016 to 2018 and in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV in 2016 during the LHC Run 2 period. A full description of the ALICE detector and performance in the LHC Run 2 can be found in Refs~\cite{Aamodt:2008zz,Abelev:2014ffa}. The analysis utilizes the V0 detector~\cite{Abbas:2013taa}, the Inner Tracking System (ITS)~\cite{aliceITS}, and the Time Projection Chamber (TPC)~\cite{aliceTPC}. 
 
-The V0 detector consists of two stations on both sides of the interaction point, V0A and V0C, each made of 32 plastic scintillator tiles, covering the full azimuthal angle within the pseudorapidity intervals $2.8 < \eta < 5.1$ and $-3.7 < \eta < -1.7$, respectively. The V0 provides a minimum-bias (MB) trigger in both pp and p--Pb collisions and an additional high-multiplicity trigger in pp collisions. The minimum bias trigger is obtained by a time coincidence of V0A and V0C signals. The charged particle multiplicity is determined based on the sum of the V0A and V0C signals, which is denoted as V0M. The high-multiplicity trigger requires the V0M signal to exceed 5 times the mean value measured in MB collisions, selecting the 0.1\% of MB events with the largest V0M multiplicity. The analyzed data samples of MB and high-multiplicity pp events at $\sqrt{s}=$~13 TeV correspond to integrated luminosities ($\mathcal{L}_\mathrm{int}$) of 19 nb$^{-1}$ and 11 pb$^{-1}$, respectively~\cite{ALICE-PUBLIC-2016-002}. In p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$ TeV, the number of events corresponding to $\mathcal{L}_\mathrm{int} = 3$ nb$^{-1}$ is used for the analysis. 
+The V0 detector consists of two stations on both sides of the interaction point, V0A and V0C, each made of 32 plastic scintillator tiles, covering the full azimuthal angle within the pseudorapidity intervals $2.8 < \eta < 5.1$ and $-3.7 < \eta < -1.7$, respectively. The V0 provides a minimum-bias (MB) trigger in both pp and p--Pb collisions and an additional high-multiplicity trigger in pp collisions. The minimum bias trigger is obtained by a time coincidence of V0A and V0C signals. The charged particle multiplicity is determined based on the sum of the V0A and V0C signals, which is denoted as V0M. The high-multiplicity trigger requires the V0M signal to exceed five times the mean value measured in MB collisions, selecting the 0.1\% of MB events with the largest V0M multiplicity. The analyzed data samples of MB and high-multiplicity pp events at $\sqrt{s}=$~13 TeV correspond to integrated luminosities ($\mathcal{L}_\mathrm{int}$) of 19 nb$^{-1}$ and 11 pb$^{-1}$, respectively~\cite{ALICE-PUBLIC-2016-002}. In p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$ TeV, the number of events corresponding to $\mathcal{L}_\mathrm{int} = 3$ nb$^{-1}$ is used for the analysis. 
 
 The primary vertex positions are reconstructed from signals measured by the Silicon Pixel Detector (SPD)~\cite{Santoro2009:ALICESPD}, consisting of the two innermost layers of the ITS. The reconstructed primary vertices are required to be within 8 cm of the nominal interaction point along the beam direction. Pileup events are determined and rejected if the longitudinal displacement of the secondary vertex is greater than 0.8 cm in pp collisions. The probability of pileup events is estimated to be about 0.6\% for MB and high-multiplicity events in pp collisions. The pileup probability is estimated to be negligible in p--Pb collisions. 
 
@@ -27,7 +27,7 @@ $B (0,0)$ represents the normalization of $B(\Delta\eta, \Delta\varphi)$, and by
 %The tracking inefficiency is corrected for on the right-hand side of Eq.~\ref{eq:corrfunction} as functions of $p_\mathrm{T}$ and $\eta$. 
 In the previous study~\cite{ALICE:2021nir}, the tracking efficiency was calculated with a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}. The tracking efficiency is determined by re-weighting the primary particle composition based on a data-driven method~\cite{ALICE:2018hza,ALICE:2018vuu}. 
 %Therefore, this method improves the jet-yield extraction and has no impact on the flow extraction.
-The pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{vtx}$ interval, and the correlation functions are averaged over the vertex bins, resulting in the final per-trigger yield~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. The lower limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ ($> 1~GeV$/$c$) is chosen in order to avoid jet-like contributions which extend into the larger $\Delta\eta$ range for lower $p_\mathrm{T}$ particles because of the limited $\eta$ acceptance~\cite{ALICE:2021nir} . 
+The pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{vtx}$ interval, and the correlation functions are averaged over the vertex bins, resulting in the final per-trigger yield~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. The lower limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ ($>$~1~GeV/$c$) is chosen in order to avoid jet-like contributions which extend into the larger $\Delta\eta$ range for lower $p_\mathrm{T}$ particles because of the limited $\eta$ acceptance~\cite{ALICE:2021nir}. 
 
 \begin{figure}[h!]
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_ppHigh.pdf} 
@@ -38,7 +38,7 @@ The pairs in mixed events are required to have primary vertices within the same 
 \label{fig:doubleridge}
 \end{figure}
 
-The two-dimensional correlation functions in pp collisions at $\sqrt{s}=13$ TeV are shown at the top panels in Fig.~\ref{fig:doubleridge} for the high-multiplicity (0--0.1\% for pp and 0--5\% for p--Pb, left) and low-multiplicity (60--100\% both for pp and p--pPb, right). The bottom panels show those in $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions. 
+The two-dimensional correlation functions in pp collisions at $\sqrt{s}=13$ TeV are shown at the top panels in Fig.~\ref{fig:doubleridge} for the high-multiplicity (0--0.1\% for pp and 0--5\% for p--Pb, left) and low-multiplicity (60--100\% both for pp and p--Pb, right). The bottom panels show those in $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions. 
 %The multiplicity percentile of p--Pb collisions is wider as particle multiplicity, ranging from 0--5\%, compared to that of pp collisions.
 %The $z$-axis for the correlation yield is properly scaled in order to zoom in the larger $\Delta\eta$ region.
 The $z$-axis is scaled in order to resolve the structures in large $\Delta\eta$ regions.
@@ -63,25 +63,25 @@ As discussed in Refs.\cite{ATLAS:2015hzw,ATLAS:2016yzd}, the correlation functio
 \label{eq:narray}
 Y_{\rm{HM}}(\Delta\varphi) = G~(1 + 2v_{2,2}\cos(2\Delta\varphi) + 2v_{3,3}\cos(3\Delta\varphi)) + F~Y_{\rm{LM}}(\Delta\varphi) \quad,
 \end{eqnarray}
-where $Y_{\rm{LM}}(\Delta\varphi)$ is the low-multiplicity template and $Y_{\rm{HM}}(\Delta\varphi)$ is the higher multiplicity template relative to $Y_{\rm{LM}}(\Delta\varphi)$, G is the normalization factor for the Fourier component up to the third harmonic $v_{n,n}$. The scale factor $F$ corresponds to the relative away-side jet-like contribution with respect to the low-multiplicity template corresponding to the 60--100\% percentile~\cite{ALICE:2013tla,ALICE:2014mas}. 
+where $Y_{\rm{LM}}(\Delta\varphi)$ is the low-multiplicity template and $Y_{\rm{HM}}(\Delta\varphi)$ is the higher multiplicity template relative to $Y_{\rm{LM}}(\Delta\varphi)$. G is the normalization factor for the Fourier component up to the third harmonic $v_{n,n}$. The scale factor $F$ corresponds to the relative away-side jet-like contribution with respect to the low-multiplicity template corresponding to the 60--100\% percentile~\cite{ALICE:2013tla,ALICE:2014mas}. 
 The fit determines the scale factor $F$, pedestal $G$, and $v_{n,n}$ and is performed in various high-multiplicity classes as well as in different $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ intervals. 
 %This method does not rely on the zero yield at minimum (ZYAM) hypothesis~\cite{Ajitanand:2005jj} to subtract an assumed flat combinatorial component from the low-multiplicity template as done previously in Refs.~\cite{ATLAS:2012cix,ATLAS:2014qaj}. 
-This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side originating from jet fragmentation, and that the jet shape remains unchanged in high-multiplicity events compared to low-multiplicity events. The first assumption is well-verified using the selected low-multiplicity template. The second assumption, regarding the modification of jet shapes, was tested with projections of the near-side jet peaks on $\Delta\eta$, which do not show significant dependence on their shape on multiplicity~\cite{LAKOMOV2017329}. Additionally, the ATLAS Collaboration's study of high-multiplicity pp and p-Pb collisions in Ref.~\cite{ATLAS:2018ngv} provides further support for this assumption, as there is no evidence of jet quenching in these collisions~\cite{Adam:2014qja,Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}.
+This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side originating from jet fragmentation, and that the jet shape remains unchanged in high-multiplicity events compared to low-multiplicity events. The first assumption is well-verified using the selected low-multiplicity template. The second assumption, regarding the modification of jet shapes, was tested with projections of the near-side jet peaks on $\Delta\eta$, which do not show a significant dependence on their shape on multiplicity~\cite{LAKOMOV2017329}. Additionally, the ATLAS Collaboration's study of high-multiplicity pp and p-Pb collisions in Ref.~\cite{ATLAS:2018ngv} provides further support for this assumption, as there is no evidence of jet quenching in these collisions~\cite{Adam:2014qja,Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}.
 
 \begin{figure}[h!]
 	\centering
 	\hspace{-3em}\includegraphics[width=0.6\textwidth]{figures/Fig1_FlowExt.pdf} 
-	\caption{The template fit results with the low-multiplicity templates. The black markers show the signal for the 0--0.1\% multiplicity percentile and its fit as a blue band. The red squares correspond to the low-multiplicity signal. The orange and green curves correspond to the extracted $v_2$ and $v_3$ signals, respectively. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894}
+	\caption{The template fit results with the low-multiplicity templates. The black markers show the signal for the 0--0.1\% multiplicity percentile and its fit as a blue band. The red squares correspond to the low-multiplicity signal. The orange and green curves correspond to the extracted $v_{2,2}$ and $v_{3,3}$ signals, respectively. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894}
 	\label{fig:flowext}
 \end{figure}
 
 Figure~\ref{fig:flowext} shows the template fit results for 0--0.1\% multiplicity percentile pp collisions at $\sqrt{s}$ = 13 TeV. The low-multiplicity yield,  $Y_{\rm{LM}}(\Delta\varphi)$, is shown in red squares, and the extracted $v_{2}$ and $v_{3}$ as orange and green respectively. The results on the scale factor $F$ in different multiplicity percentiles and systems are summarized in Tab.~\ref{tab:FpppPb}. 
-In pp collisions, they are larger at high multiplicity, and in p--Pb collisions they are closer to unity at low multiplicity. This suggests that the jet fragmentation yield on the away-side increases with multiplicity, which is more pronounced in pp collisions.
+Those are larger at high multiplicity in pp collisions, while they are closer to unity at low multiplicity in p--Pb collisions. This suggests that the jet fragmentation yield on the away-side increases with multiplicity, which is more pronounced in pp collisions.
  In previous ALICE results~\cite{ALICE:2012eyl,ALICE:2013snk}, it was assumed that the jet contribution is unchanged as a function of multiplicity (i.e. $F$ was assumed to be 1), which may lead to an underestimation of non-flow contamination in the final measurements of anisotropic flow. 
  The fit to the signal, Eq.~\ref{eq:narray}, is shown as a blue band, and the signal-to-fit ratio is shown in the bottom panel. 
 %let's add chiq value of the fit
 \begin{table}[h!]
-\caption{The scale factor $F$ for various multiplicity percentiles in pp (top) and p--pPb (bottom) collisions.}
+\caption{The scale factor $F$ for various multiplicity percentiles in pp (top) and p--Pb (bottom) collisions.}
 \begin{tabular}{|c|c|c|c|c|c}
 \hline
 V0M (pp)& 0--0.1\% & 1--5\% & 5--20\% & 20--60\% \\
@@ -123,7 +123,7 @@ In PYTHIA, it is possible to directly measure  $Y^{\rm{away}}$ from the $\Delta\
 \end{figure}
 
 Figure~\ref{fig:Ymult} presents the $Y^{\mathrm{near}}_{\rm{frag}}$ and $Y^{\mathrm{away}}_{\rm{frag}}$, for both ALICE data and PYTHIA 8 Tune 4C as a function of multiplicity percentile in pp collisions at $\sqrt{s}=13$ TeV. The transverse momentum range for trigger particles is $1<p_\mathrm{T,trig}<2$ GeV/c and for associated particles $1<p_\mathrm{T,assoc}<4$ GeV/c. ALICE data points are shown as circle and square markers, whereas PYTHIA is shown as lines. The near-side yields are shown in black, and the away-side yields in blue.
-The near- to away-side ratio for ALICE and PYTHIA data is shown in the bottom panel. While PYTHIA overestimates ALICE data for both $Y^{\mathrm{near}}_{\rm{frag}}$ and $Y^{\mathrm{away}}_{\rm{frag}}$, the ratio to PYTHIA is consistent with the ALICE data in the multiplicity percentiles studied. This ratio can be explained by the pair acceptance effect caused by the limited ALICE $\eta$ acceptance~\cite{PHENIX:2006gto}, which implies that the enhanced jet fragmentation yields in away-side in high-multiplicity events with respect to low-multiplicity events~\cite{ALICE:2013tla,ALICE:2014mas} are taken into account in by the low-multiplicity template method. In summary, the difference between the near-side and away-side jet fragmentation yields in PYTHIA is solely caused by the jet acceptance effects of the two-particle correlation functions. This ratio in data where the away-side jet fragmentation yields are measured with the low-multiplicity template agrees well with PYTHIA as well as the calculations in Ref.~\cite{PHENIX:2006gto}, which provides only the jet acceptance effect.
+The near- to away-side ratio for ALICE and PYTHIA data is shown in the bottom panel. While PYTHIA overestimates ALICE data for both $Y^{\mathrm{near}}_{\rm{frag}}$ and $Y^{\mathrm{away}}_{\rm{frag}}$, the ratio to PYTHIA is consistent with the ALICE data in the multiplicity percentiles studied. This ratio can be explained by the pair acceptance effect caused by the limited ALICE $\eta$ acceptance~\cite{PHENIX:2006gto}, which implies that the enhanced jet fragmentation yields in away-side in high-multiplicity events with respect to low-multiplicity events~\cite{ALICE:2013tla,ALICE:2014mas} are taken into account by the low-multiplicity template method. In summary, the difference between the near-side and away-side jet fragmentation yields in PYTHIA is solely caused by the jet acceptance effects of the two-particle correlation functions. This ratio in data where the away-side jet fragmentation yields are measured with the low-multiplicity template agrees well with PYTHIA as well as the calculations in Ref.~\cite{PHENIX:2006gto}, which provides only the jet acceptance effect.
 %It is worthwhile to noting that, even though this method measures the jet yields on the away side from the fit, these yields were not reported in previous measurements~\cite{}.
 
 %\begin{figure}[h!]
@@ -137,12 +137,12 @@ The near- to away-side ratio for ALICE and PYTHIA data is shown in the bottom pa
 %show an asymmetry in delta eta, e.g. in pp collisions the signal
 %rises going from negative to positive delta eta values
 
-The flow coefficients, $v_{n}$ of the trigger particles, can be extracted from the template fit with the use of the observed factorization of $v_{n,n}$ coefficients to single harmonics~\cite{ATLAS:2015hzw,ATLAS:2016yzd} by using
+The flow coefficients, $v_{n}$, of the trigger particles, can be extracted from the template fit with the use of the observed factorization of $v_{n,n}$ coefficients to single harmonics~\cite{ATLAS:2015hzw,ATLAS:2016yzd} by using
 \begin{eqnarray}
 v_{n}(p_{\rm{T,trig}}) = v_{n,n}(p_{\rm{T,trig}}, p_{\rm{T,assoc}}) / \sqrt{ v_{n,n}(p_{\rm{T,assoc}},p_{\rm{T,assoc}})},
 \end{eqnarray}
-where $v_{n,n}(p_{\rm{T,assoc}}$ and $p_{\rm{T,assoc}})$ are measured in 1~$<p_{\rm{T,trig}}<$~4~GeV/$c$ interval as the $p_{\rm{T,assoc}}$ range is fixed with 1~$<p_{\rm{T,assoc}}<$~4~GeV/$c$. In the following sections, unless explicitly stated otherwise, $v_n$ will refer to $v_n(p_{\rm{T,trig}})$.
-Different event scale selections are investigated by selecting events that include a hard jet or a high-$\pt$ leading particle within the mid-rapidity region, it is possible to study the impact parameter dependence of flow coefficients in pp collisions~\cite{Sjostrand:1986ep,Frankfurt:2010ea}. This event scale is set by requiring a minimum $\pt$ of the leading track ($\ptlead$) or the reconstructed jet ($\ptjet$) at midrapidity. The leading particle track requires to be within $|\eta|<0.9$ and $0<\phi<2\pi$, and the jets are reconstructed with the anti-$k_{\rm{T}}$ algorithm~\cite{Cacciari:2008gp,Cacciari:2011ma}, with $R=0.4$ for only charged particles. This analysis uses the $\pt$ scheme as the recombination scheme. In the same way, as for the leading particle tracks, the jets are selected in the full azimuthal angle ($0<\phi<2\pi$) but in an $\eta$-range of $|\eta_\mathrm{jet}|<0.4$. The $\pt$ of jets $\ptjet$ is corrected for the underlying event density that is measured using the $k_{\rm{T}}$ algorithm with $R=$~0.2~\cite{Acharya:2018eat}.
+where $v_{n,n}(p_{\rm{T,assoc}}, p_{\rm{T,assoc}})$ are measured in 1~$<p_{\rm{T,trig}}<$~4~GeV/$c$ interval as the $p_{\rm{T,assoc}}$ range is fixed with 1~$<p_{\rm{T,assoc}}<$~4~GeV/$c$. In the following sections, unless explicitly stated otherwise, $v_n$ will refer to $v_n(p_{\rm{T,trig}})$.
+Different event scale selections are investigated by selecting events that include a hard jet or a high-$\pt$ leading particle within the mid-rapidity region. It is possible to study the impact parameter dependence of flow coefficients in pp collisions~\cite{Sjostrand:1986ep,Frankfurt:2010ea}. This event scale is set by requiring a minimum $\pt$ of the leading track ($\ptlead$) or the reconstructed jet ($\ptjet$) at midrapidity. The leading particle track requires to be within $|\eta|<0.9$ and $0<\phi<2\pi$, and the jets are reconstructed with the anti-$k_{\rm{T}}$ algorithm~\cite{Cacciari:2008gp,Cacciari:2011ma}, with $R=0.4$ for only charged particles. This analysis uses the $\pt$ scheme as the recombination scheme. In the same way, as for the leading particle tracks, the jets are selected in the full azimuthal angle ($0<\phi<2\pi$) but in an $\eta$-range of $|\eta_\mathrm{jet}|<0.4$. The $\pt$ of jets $\ptjet$ is corrected for the underlying event density that is measured using the $k_{\rm{T}}$ algorithm with $R=$~0.2~\cite{Acharya:2018eat}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -181,16 +181,16 @@ The uncertainty associated to the selected range of the primary vertex is estima
 
 Another source of systematic uncertainty is related to pileup rejection. Pileup events are rejected with different rejection criteria, such as the number of track contributors required for the reconstruction of pileup event vertices, where the number is changed from the default value of 3 to 5. The uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are estimated to be 0.1--0.5\% and 0.2\%, respectively. The estimated uncertainties are negligible for $F$. The estimated uncertainties of $v_{2}$ and $v_{3}$ are 0.6\% and 1.4\%, respectively.
 
-The systematic uncertainty from the track selection criteria is estimated by employing the other track selection criteria so called “global tracks”, which is described in Ref~\cite{ALICE:2021ptz}. The global track is required to have two hits in the ITS (at least one in the SPD) and at least 70 clusters in TPC. Due to inefficient parts of the SPD, the azimuthal distribution of global tracks is not uniform, which can be corrected within the azimuthal interval we defined including different $p_{\mathrm{T}}$ inefficiency of this tracking. The systematic uncertainty from the different track selection criteria is  0.2--3.0\% for $v_{2}$ and  5.0--6.9\% for $v_{3}$. 
+The systematic uncertainty from the track selection criteria is estimated by employing the other track selection criteria so called “global tracks”, which is described in Ref~\cite{ALICE:2021ptz}. The global track is required to have two hits in the ITS (at least one in the SPD) and at least 70 clusters in TPC. Due to inefficient parts of the SPD, the azimuthal distribution of global tracks is not uniform, which can be corrected within the azimuthal interval we defined, including different $p_{\mathrm{T}}$ inefficiency of this tracking. The systematic uncertainty from the different track selection criteria is  0.2--3.0\% for $v_{2}$ and  5.0--6.9\% for $v_{3}$. 
 
 
 An additional systematic uncertainty from the event-mixing is estimated by varying the interval of the primary vertex range, where events are mixed. The default value of 2~cm is changed to 1~cm. The resulting uncertainty of jet fragmentation yield ($Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$) is 0.2--0.7\%. The uncertainties of $F$, $v_{2}$, and $v_{3}$ are estimated to be 0.3--4.6\%.
 
-The systematic uncertainty from the low-multiplicity definition is estimated by changing the range of the low-multiplicity centrality percentile. There is no universal definition for the low-multiplicity, and the default range for the low-multiplicity in the present paper is set to 60--100\%, and changed to 70--100\%. The uncertainty of $Y^{\rm{away,LM}}$ is estimated to be 0.5--3.5\%. Note that the measurement of $Y^{\rm{near}}$ is not relevant to the low-multiplicity definition, and the uncertainty is not estimated. The uncertainties of $F$, $v_{2}$, and $v_{3}$ are estimated to be 0.7--9.2\%.
+The systematic uncertainty from the low-multiplicity definition is estimated by changing the range of the low-multiplicity centrality percentile. There is no universal definition for the low-multiplicity, and the default range for the low-multiplicity in the present paper is set to 60--100\%, and changed to 70--100\%. The uncertainty of $Y^{\rm{away,LM}}$ is estimated to be 0.5--3.5\%. Note that the measurement of $Y^{\rm{near}}$ is irrelevant to the low-multiplicity definition, and the uncertainty is not estimated. The uncertainties of $F$, $v_{2}$, and $v_{3}$ are estimated to be 0.7--9.2\%.
 
 The systematic uncertainty from matching the track reconstructed by the TPC and the corresponding signal in the ITS is estimated by evaluating the fraction of the mismatch between them. The estimated uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are 2.0--3.0\%.
 
-The systematic uncertainty from the efficiency correction for unidentified charged particles is estimated by comparing two correlation functions. One is constructed using true information in MC samples. The other is constructed using the reconstructed tracks, where reconstructed tracks are corrected for the tracking efficiency. The estimated uncertainty is 0.1--5.0\%.
+The systematic uncertainty from the efficiency correction for unidentified charged particles is estimated by comparing two correlation functions. One is constructed using true information in MC samples. The other is constructed using the reconstructed tracks, where reconstructed tracks are corrected for tracking efficiency. The estimated uncertainty is 0.1--5.0\%.
 
 Due to the limited $\eta$ acceptance of the TPC, non-flow contributions mainly originating from jet fragmentations affect the flow measurement. As the shape of short-range correlations mostly attributed to jets is getting broader with the decreasing $\pt$, the systematic uncertainty from $\eta$-acceptance significantly depends on the $p_{\rm{T}}$. To estimate the related uncertainty, the minimum $\Delta\eta$ gap is changed from 1.6 to 1.7 for constructing long-range $\Delta\varphi$ correlations.  The estimated uncertainties of $F$, $v_{2}$, and $v_{3}$ are 0.1--5.0\%.
 
