--- a/sec_results.tex
+++ b/sec_results.tex
@@ -53,7 +53,7 @@ However, the measurements are only limited with low $\it{p}^{\rm{jet}}_{\rm{T}}$
 \end{figure}
 
 In this section, the results are compared to various model calculations and the data to model comparison is shown in Fig.~\ref{fig:vnmult_model}.
-The results from the data in p--Pb collisions are compared with hydrodynamical calculations using the parametrization from an improved global
+The results from the data in p--Pb collisions are compared with hydrodynamic calculations using the parametrization from an improved global
 Bayesian analysis of new sophisticated collective flow observables
  from two different beam energies in Pb--Pb collisions~\cite{Parkkila:2021yha}. This hydrodynamic model, {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU, consists of the {T\raisebox{-.5ex}{R}ENTo} model~\cite{Moreland:2014oya} for the initial condition, which is connected with a free streaming to a 2+1 dimensional causal hydrodynamic model VISH2+1~\cite{Shen:2014vra}. The evolution is continued after particlization with a hadronic cascade (UrQMD) model~\cite{Bass:1998ca,Bleicher:1999xi}. The initial conditions, $\eta/s(T)$, $\zeta/s(T)$ and other free parameters of the hybrid model are extracted in a global Bayesian analysis.
 %incorporating constraints measured from a Pb--Pb collision system at $\sqrt{s_\mathrm{NN}}=5.02\,\mathrm{TeV}$.
