Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -1418,7 +1418,7 @@
 }
 
 @article{PhysRevD.65.092002,
-  title = {Measurement of the jet fragmentation function and transverse profile in proton-antiproton collisions at s√=1.8 TeV},
+  title = {Measurement of the jet fragmentation function and transverse profile in proton-antiproton collisions at $\sqrt{s}$=1.8 TeV},
   author = {{CDF Collaboration}},
   journal = {Physical Review D},
   volume = {65},
@@ -1429,7 +1429,7 @@
 }
 
 @article{Aad:2011fc,
-  title = {Measurement of the inclusive jet cross-section in proton-proton collisions at √s=7 TeV using 4.5 fb−1 of data with the ATLAS detector},
+  title = {Measurement of the inclusive jet cross-section in proton-proton collisions at $\sqrt{s}$=7 TeV using 4.5 fb-1 of data with the ATLAS detector},
   author = {{ATLAS Collaboration}},
   journal = {Journal of High Energy Physics},
   volume = {2011},
@@ -1440,7 +1440,7 @@
 }
 
 @article{Khachatryan:2014waa,
-  title = {Measurement of the inclusive jet cross section in pp collisions at √s=2.76 TeV},
+  title = {Measurement of the inclusive jet cross section in pp collisions at $\sqrt{s}$=2.76 TeV},
   author = {{CMS Collaboration}},
   journal = {Journal of High Energy Physics},
   volume = {2014},
@@ -1466,20 +1466,6 @@
     year = "2022"
 } %global tracking
 
-@article{ATLAS:2011ah,
-    author = "Aad, Georges and others",
-    collaboration = "ATLAS",
-    title = "{Measurement of the pseudorapidity and transverse momentum dependence of the elliptic flow of charged particles in lead-lead collisions at $\sqrt{s_{NN}}=2.76$ TeV with the ATLAS detector}",
-    eprint = "1108.6018",
-    archivePrefix = "arXiv",
-    primaryClass = "hep-ex",
-    reportNumber = "CERN-PH-EP-2011-124",
-    doi = "10.1016/j.physletb.2011.12.056",
-    journal = "Phys. Lett. B",
-    volume = "707",
-    pages = "330--348",
-    year = "2012"
-}
 @article{PHENIX:2018hho,
     author = "Adare, A. and others",
     collaboration = "PHENIX",
