--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -21,7 +21,7 @@ Measurements of anisotropic flow in small collision systems are strongly affecte
 For two-particle correlations, the non-flow contribution is usually suppressed by requiring a large $\Delta\eta$ gap between the two particles,  and it is also widely used in cumulant methods~\cite{Bilandzic:2010jr, Acharya:2019vdf}. However, this $\Delta\eta$ gap method for both two-particle correlations and cumulants removes the non-flow contribution only on the near side and not on the away side~($\Delta\varphi\sim\pi$). Later the use of low-multiplicity template fit was proposed to remove also away-side contributions~\cite{ATLAS:2015hzw,ATLAS:2016yzd,ATLAS:2018ngv}, taking into account that multiplicity increases with increasing yield of jet fragments~\cite{CMS:2013ycn,ALICE:2013tla,ALICE:2014mas}. This template fit method allows one to subtract the enhanced away-side jet fragments which are estimated from low-multiplicity events. 
 %This template fit method allows one to subtract the enhanced away-side jet fragments in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
 
-As an extension of the studies of the near-side long-range ridge and jet fragmentation yields in pp collisions at $\sqrt{s}=13\,\mathrm{TeV}$ in Ref.~\cite{ALICE:2021nir}, this report studies the interplay of the jet production and collective effects in small systems, long- and short-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions. The flow coefficients and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection requires a minimum transverse momentum of the leading particle or the reconstructed jet at mid-rapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2003td,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet provides a measure of the momentum transfer ($Q^2$) in the hard parton scattering~\cite{Chatrchyan:2012tt, Chatrchyan:2011id}. The transverse momentum threshold requires a higher $Q^2$ for the collision. Such events with large $Q^2$ may, on average, have a lower impact parameter, b, than pp events without any requirement on $Q^2$~\cite{Frankfurt:2003td}.
+As an extension of the studies of the near-side long-range ridge and jet fragmentation yields in pp collisions at $\sqrt{s}=13\,\mathrm{TeV}$ in Ref.~\cite{ALICE:2021nir}, this report studies the interplay of the jet production and collective effects in small systems, long- and short-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$ TeV and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions. The flow coefficients and near-side jet-like correlations with the event-scale selection are reported. The event-scale selection requires a minimum transverse momentum of the leading particle or the reconstructed jet at mid-rapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2003td,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet provides a measure of the momentum transfer ($Q^2$) in the hard parton scattering~\cite{Chatrchyan:2012tt, Chatrchyan:2011id}. The transverse momentum threshold requires a higher $Q^2$ for the collision. Such events with large $Q^2$ may, on average, have a lower impact parameter, $b$, than pp events without any requirement on $Q^2$~\cite{Frankfurt:2003td}.
 
 This paper is organized as follows. First, the experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and \ref{sec:ana}, respectively. Then, the estimation of systematic uncertainties is discussed in Sec.~\ref{sec:uncertainties}. The results and comparisons with model calculations of the measurements are presented in Sec.~\ref{sec:results}. Finally, the results are summarized in~Sec.~\ref{sec:summary}.
 
