--- a/sec_results.tex
+++ b/sec_results.tex
@@ -11,7 +11,7 @@
 	\label{fig:vn}
 \end{figure}
 
-Figure~\ref{fig:vn} shows the extracted values of $v_2$ and $v_3$ as a function of $p_{\mathrm{T,trig}}$ using the low multiplicity template fits. The results were obtained for the high multiplicity percentile of the 0--0.1\% in pp collisions at $\sqrt{s}=13$~TeV and 0--20\% in p--Pb collisions at $\sqrt{s_\mathrm{NN}}=5.02$~TeV. Both results indicate that the magnitudes of $v_n$ increase at higher values of $p_{\mathrm{T,trig}}$. The magnitude of $v_2$ peaks between $2.5<p_{\mathrm{T,trig}}<3.0$ GeV/c, similar to the results from Pb--Pb collisions~\cite{ALICE:2018yph}. A similar trend is seen for $v_3$ within the uncertainties. The magnitudes of $v_2$ in p--Pb collisions are higher than those in pp collisions, which could be attributed to the larger system size and longer-lived medium in p--Pb collisions. However, the magnitudes of $v_3$ are similar in both collisions, indicating that it is less sensitive to the collision systems.
+Figure~\ref{fig:vn} shows the extracted values of $v_2$ and $v_3$ as a function of $p_{\mathrm{T,trig}}$ using the low-multiplicity template fits. The results were obtained for the high multiplicity percentile of the 0--0.1\% in pp collisions at $\sqrt{s}=13$~TeV and 0--20\% in p--Pb collisions at $\sqrt{s_\mathrm{NN}}=5.02$~TeV. Both results indicate that the magnitudes of $v_n$ increase at higher values of $p_{\mathrm{T,trig}}$. The magnitude of $v_2$ peaks between $2.5<p_{\mathrm{T,trig}}<3.0$ GeV/c, similar to the results from Pb--Pb collisions~\cite{ALICE:2018yph}. A similar trend is seen for $v_3$ within the uncertainties. The magnitudes of $v_2$ in p--Pb collisions are higher than those in pp collisions, which could be attributed to the larger system size and longer-lived medium in p--Pb collisions. However, the magnitudes of $v_3$ are similar in both collisions, indicating that it is less sensitive to the collision systems.
 These results are comparable to those obtained by ATLAS in different multiplicity classes, where the same method was used to extract the flow coefficients~\cite{ATLAS:2016yzd}. Even though the $\Delta\eta$ and $p_{\mathrm{T,assoc}}$ ranges are wider in the ATLAS results at $2.0<|\Delta\eta|<5.0$ and $0.5<p_{\mathrm{T,assoc}}<5\,\mathrm{GeV}/c$, respectively, the results are consistent within uncertainties.
 
 \begin{figure}[h!]
@@ -64,7 +64,7 @@ As shown in Fig.~\ref{fig:vnmult_model}, it is found that {T\raisebox{-.5ex}{R}E
 The results are also compared with IP-Glasma+MUSIC+UrQMD hydrodynamic calculations~\cite{Schenke:2020mbo}. This model uses IP-Glasma initial conditions~\cite{Schenke:2012wb} including sub-nucleonic fluctuations with three hot-spots per nucleon. The hydrodynamic evolution is performed by MUSIC~\cite{Schenke:2010rr} and coupled with the UrQMD~\cite{Bass:1998ca,Bleicher:1999xi} hadronic interactions. 
 % mean-pT All paramters are fixed to reproduce 200 GeV Au+Au collisions at RHIC and 
 The model calculations are performed with a constant $\eta/s=0.12$ and a temperature dependent $\zeta/s(T)$~\cite{Rose:2020lfc}. 
-This model describes well the multiplicity dependence of $v_2$ in p--Pb collisions and the magnitude at the highest multiplicity but overestimates the data for lower multiplicity classes. As for pp collisions, the calculations clearly miss both the observed magnitude except for $N_{ch}>25$ as well as the trend of the multiplicity dependence. The model shows that $v_2$ decreases with increasing multiplicity, while the experimental result shows an increase.
+This model describes well the multiplicity dependence of $v_2$ in p--Pb collisions and the magnitude at the highest multiplicity but overestimates the data for lower multiplicity classes. As for pp collisions, the calculations clearly miss both the observed magnitude except for $N_\mathrm{ch}>25$ as well as the trend of the multiplicity dependence. The model shows that $v_2$ decreases with increasing multiplicity, while the experimental result shows an increase.
 For $v_3$, the model accurately describes the magnitudes and multiplicity dependence across the measured multiplicity ranges. The magnitudes of $v_3$ are slightly smaller in pp collisions than in p--Pb collisions according to the calculations, which agrees with the data within the uncertainties.
 %model missed important physics as the system becomes very small and the multiplicity very low, as is the case in p+p collisions, even though the initial T   does include initial state momentum anisotropies from the color glass condensate, as discussed in detail in [115]. arXiv:1908.06212 [nucl-th]. NEED to look further details.
 
