--- a/sec_summary.tex
+++ b/sec_summary.tex
@@ -8,9 +8,7 @@ Long-range angular correlations for pairs of charged particles are studied in pp
 %Comparison to different experiment, suggesting a possible apple-to-apple comparison
 These $p_\mathrm{T}$ dependent results are consistent with ATLAS, and $v_n$ becomes larger for higher $p_\mathrm{T}$, and maximum of $v_n$ is reached at $2.5<p_\mathrm{T}<3.0$ GeV/$c$. 
 The measurement of $v_2$ as a function of charged particle multiplicity $N_{\mathrm{ch}}$ in $|\eta|<0.5$ shows a weak multiplicity dependence on $v_2$ both for pp and p--Pb collisions and tends to decrease toward the lower multiplicities. The results in pp collisions reveal a hint of a disappearing $v_2$ signal below $N_{\mathrm{ch}} = 10$. However, the statistical precision of the data is limited, so we cannot definitively exclude the possibility of a complete disappearance of the $v_2$ signal below this threshold. 
-The comparisons to viscous hydrodynamic models show that the magnitudes of $v_2$ and their multiplicity dependence are not described by state-of-art hydrodynamic calculations with two initial state models, especially for low multiplicity p--Pb and pp collisions. As initial state effects tend to be more important at low multiplicity 
-~\cite{Greif:2017bnr,Moreland:2018gsh}, these results may help to constrain the modelling of the initial
-State.
+The comparisons to viscous hydrodynamic models show that the magnitudes of $v_2$ and their multiplicity dependence are not described by state-of-art hydrodynamic calculations with two initial state models, especially for low-multiplicity p--Pb and pp collisions. As initial state effects tend to be more important at low multiplicity~\cite{Greif:2017bnr,Moreland:2018gsh}, these results may help to constrain the modeling of the initial state.
 %the inclusion of nucleon substructure and the large difference in the preferred pre-equilibrium :Moreland:2018gsh
 %free-streaming time determined by the two studies
 Furthermore, the events with hard probes such as jets or leading particles do not show any changes both in $v_2$ and $v_3$ within the uncertainties which implies that the long-range correlation involving soft particles is not significantly changed by the presence of a hard-scattering process. 
